fixed contrast error text color in section follow

--- a/css/follow.css
+++ b/css/follow.css
@@ -7,7 +7,7 @@
 }
 
 .follow-subtitle-hashtag {
-  color: var(--brand-color-light);
+  color: var(--text-color-accent-dark);
   font-weight: 700;
 }
 
